# src/app/api/models/musica-dto.ts
@@ -3,6 +3,7 @@
 export interface MusicaDto {
   dataLancamento?: string;
   duracao?: number;
+  favorito?: boolean;
   id?: number;
   nomeAlbum?: string;
   nomeBanda?: string;
